# ubermag

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  README.rst  appveyor.yml  nbval.cfg  notes-to-be-converted-to-issues.org  pyproject.toml  setup.cfg  setup.py  tasks.py
.github/: environment.yml  workflow.yml
.github/workflows/: conda.yml  publish.yml  test.yml  workflow.yml
binder/: environment.yml
dev-docs/: style-guide.org
docker/: Dockerfile
docs/: advanced-installation.ipynb  changelog.rst  conf.py  documentation.ipynb  hdf5-file-specification.ipynb  index.ipynb  index.rst  logging.ipynb  tutorials.rst  ubermag-version.ipynb
docs/hdf5_examples/: discretisedfield-Field.h5
docs/ipynb/: 00-tutorial-welcome.ipynb  01-tutorial-installation.ipynb  02-tutorial-testing.ipynb  03-tutorial-upgrade.ipynb  04-tutorial-documentation.ipynb  04-tutorial-micromagnetic-tutorials.ipynb  05-tutorial-ubermag-cloud.ipynb  06-tutorial-support.ipynb  07-tutorial-how-to-cite.ipynb  08-tutorial-acknowledgements.ipynb  advanced-installation.ipynb  changelog.ipynb  documentation.ipynb  finding-the-computational-backend.ipynb  index.ipynb  installation-testing-update.ipynb  installation.ipynb  logging.ipynb  other.ipynb  test_notebook.ipynb  testing.ipynb  ubermag-cloud.ipynb  welcome.ipynb  what-is-ubermag.ipynb
joommf/: __init__.py
joommf/tests/: test_init.py
tryjoommf/: Dockerfile  Makefile
ubermag/: __init__.py  basic_logging.py  info.py
ubermag/tests/: test_basic_logging.py  test_info.py  test_init.py
