[metadata]
name = ubermag
version = 0.51
description = Meta package for Ubermag project.
author = Marijan Beg, Martin Lang, Samuel Holt, Hans Fangohr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ubermag.github.io
licence = BSD 3-Clause License
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Education
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: MacOS
  Operating System :: Microsoft :: Windows
  Operating System :: Unix
  Programming Language :: Python :: 3 :: Only
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
python_requires >= 3.8
install_requires =
  oommfc==0.10.1
  micromagneticdata==0.5.1
include_package_data = True

[options.entry_points]


