[metadata]
name = ubermag
version = 0.61.0
description = Meta package for Ubermag project.
author = Marijan Beg, Martin Lang, Samuel Holt, Ryan A. Pepper, Thomas Kluyver, Jeroen Mulkers, Jonathan Leliaert, and Hans Fangohr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ubermag.github.io
licence = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
python_requires >= 3.8
install_requires =
    ubermagutil==0.61.0
    discretisedfield==0.61.0
    ubermagtable==0.61.0
    micromagneticmodel==0.61.0
    micromagneticdata==0.61.0
    micromagnetictests==0.61.0
    oommfc==0.61.0
    mag2exp==0.61.0
include_package_data = True

[options.extras_require]
dev = build;pre-commit;twine
test = nbval;pytest;pytest-cov



[flake8]
exclude =
  .git,
  __pycache__,
  build,
  dev,
  dist,
  setup.py
# 107: missing docstring in __init__
ignore = D107
per-file-ignores =
  # imported but unused
  __init__.py: F401
  # ignore missing docstrings in tests
  test_*.py: D100,D101,D102,D103
docstring-convention: numpy
# flake8-rst-docstrings:
rst-roles =
  py:class,
  py:func,
rst-directives =
  seealso,
  plot,

[codespell]
skip = .*,build/*,dev/*,dist/*
